# raylib-clicker

./: .gitpod.yml  CHANGELOG.MD  CMakeLists.txt  LICENSE  README.MD  build.sh  buildWin.ps1
docs/: TOC.md  res.md
docs/src/objects/: GameObject.md
docs/src/scenes/: Scene.md
res/: settings.json  textures.json  window.json
res/textures/: clicker.aseprite
res/textures/clicker/: clicked.aseprite  clicker.aseprite
res/textures/hand/: hand.aseprite  handExtended.aseprite
src/: main.cpp
src/objects/: Clicker.cpp  Clicker.h  Hand.cpp  Hand.h  Score.cpp  Score.h
src/objects/default/: GameObject.cpp  GameObject.h
src/scenes/: GameScene.cpp  GameScene.h
src/scenes/default/: Scene.cpp  Scene.h
src/utils/: Timer.h  Utils.h
